<resources>
    <string name="app_name"><b>AICapital </b></string>
    <string name="srushti_quote"> जीवो जीवस्‍य जीवनम्\nSave Biodiversity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="que">including the Indian Administrative Service, Indian Foreign Service, and Indian Police Service.</string>
    <string name="Rs">\u20B9</string>
    <string name="amount_refund">AMOUNT WILL BE 100 % REFUNDBLE *\n WE ARE OBEYING CONSUMER PROTECTION ACT 2020. FOR MORE INFORMATION PLEASE READ OUR TERMS AND CONDITIONS AND CANCELLATION POLICY. </string>
    <string name="menu_pp">Privacy Policy</string>
    <string name="error_msg_unknown">Error Message</string>
    <string name="menu_tandc">Terms and Conditions </string>
    <string name="menu_facebook">Facebook</string>
    <string name="menu_twitter">Twitter</string>
    <string name="menu_instagram">Instagram</string>
    <string name="menu_signout">Sign Out </string>
    <string name="error_msg">Sorry! Couldn\'t fetch movies.</string>
    <string name="btn_retry">Retry</string>
    <string name="error_msg_no_internet">Not connected to internet</string>
    <string name="error_msg_timeout">The server took too long to respond</string>
    <string name="tap_to_reload">Tap to reload</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
</resources>
